Added index.html, style.css and images

--- a/index.html
+++ b/index.html
@@ -1,15 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    lkjahsdjkakjsd kkahsd jkahskd kahnsdjk hasjkdh a
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sajan Srikanthan</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap"
+    rel="stylesheet"
+  />
+  <body>
+    <header>
+      <img src="Images/Menu-besides-name.svg" class="menu-besides-name" />
+      <a class="my-name" href="index.html">SAJAN</a>
+      <nav>
+        <ul class="nav-bar-menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="mailto: sajan@sajansrikanthan.com">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    aiohsd jahjshd jkasdh jkasdh
-    asdh jashdj hajshd jkahkjsdhk jhwskjfhkjsahdfioqi jhwrij
-</body>
+    <main>
+      <img src="images/Picture-of-me.png" class="picture-of-me" />
+      <div class="main-text">
+        <h1>I’m Sajan, a designer and creative from Sweden</h1>
+        <p>
+          Constantly seeking improvements and striving to further my skills.
+          Currently spending my days practising and learning both web
+          development & python to both streamline my workflow and implement new
+          features into what I create.
+        </p>
+      </div>
+      <div class="socials">
+        <div class="instagramicon">
+          <a target="blank" href="https://instagram.com/sajansrikanthan">
+            <img src="images/instagram.svg" />
+          </a>
+        </div>
+        <div class="twittericon">
+          <a target="blank" href="https://twitter.com/SajanSrii">
+            <img src="images/twitter.svg" />
+          </a>
+        </div>
+        <div class="emailicon">
+          <a target="blank" href="mailto: sajan@sajansrikanthan.com">
+            <img src="images/Email.svg" />
+          </a>
+        </div>
+      </div>
+      <section>
+        <div class="services-text">
+          <h2>Services</h2>
+          <p>These are the services I provide.</p>
+        </div>
+        <div class="services-offered">
+          <div class="webdesign">
+            <img src="images/Blue-Service-Icon.png" class="webdesignpicture" />
+            <h3>Web Design & Mobile App Design</h3>
+            <p>I can design a website/app for your business.</p>
+          </div>
+          <div class="webdevelopment">
+            <img
+              src="images/Green-Service-Icon.png"
+              class="webdevelopmentpicture"
+            />
+            <h3>Web Development</h3>
+            <p>I use HTML and CSS to make modern and functional websites.</p>
+          </div>
+          <div class="python">
+            <img src="images/Orange-Service-Icon.png" class="pythonpicture" />
+            <h3>Python</h3>
+            <p>Lorem Ipsum.</p>
+          </div>
+        </div>
+      </section>
+      <footer>
+        <div class="footertext1">
+          <h4>Hire Me</h4>
+          <p>Hire me for your next project!</p>
+        </div>
+        </div>
+        <div class="button">
+        <a href="mailto: sajan@sajansrikanthan.com" class="button1">Contact Me</a>
+      </footer>
+    </main>
+  </body>
 </html>
