updated files names

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   />
   <body>
     <header>
-      <img src="images/Menu-besides-name.svg" class="menu-besides-name" />
+      <img src="images/menu-besides-name.svg" class="menu-besides-name" />
       <a class="my-name" href="index.html">SAJAN</a>
       <nav>
         <ul class="nav-bar-menu">
@@ -25,7 +25,7 @@
     </header>
 
     <main>
-      <img src="images/Picture-of-me.png" class="picture-of-me" />
+      <img src="images/picture-of-me.png" class="picture-of-me" />
       <div class="main-text">
         <h1>I’m Sajan, a designer and creative from Sweden</h1>
         <p>
@@ -48,7 +48,7 @@
         </div>
         <div class="emailicon">
           <a target="blank" href="mailto: sajan@sajansrikanthan.com">
-            <img src="images/Email.svg" />
+            <img src="images/email.svg" />
           </a>
         </div>
       </div>
@@ -59,20 +59,17 @@
         </div>
         <div class="services-offered">
           <div class="webdesign">
-            <img src="images/Blue-Service-Icon.png" class="webdesignpicture" />
+            <img src="images/blue-service-icon.png" class="webdesignpicture" />
             <h3>Web Design & Mobile App Design</h3>
             <p>I can design a website/app for your business.</p>
           </div>
           <div class="webdevelopment">
-            <img
-              src="images/Green-Service-Icon.png"
-              class="webdevelopmentpicture"
-            />
+            <img src="images/green-service-icon.png" class="webdevelopmentpicture"/>
             <h3>Web Development</h3>
             <p>I use HTML and CSS to make modern and functional websites.</p>
           </div>
           <div class="python">
-            <img src="images/Orange-Service-Icon.png" class="pythonpicture" />
+            <img src="images/orange-service-icon.png" class="pythonpicture" />
             <h3>Python</h3>
             <p>Lorem Ipsum.</p>
           </div>
